# wa-quotes

./: .gitignore  Cargo.toml  quotes.xlsx  test.docx
src/: lib.rs  main.rs
