[package]
name = "wa-quotes"
version = "0.1.0"
edition = "2021"
default-run = "wa-quotes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.26"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
deunicode = "1.4.3"
fontdue = { version = "0.9.0", features = ["std"] }
image = "0.25.1"
imageproc = "0.25.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
temp = "1.0.0"
tempfile = "3.10.1"
zip = "2.1.0"
