[package]
name = "wa-quotes"
version = "0.1.0"
edition = "2021"
default-run = "wa-quotes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
deunicode = "1.4"
docx-rs = "0.4"
fontdue = { version = "0.9", features = ["std"] }
rust_xlsxwriter = { version = "0.68", features = ["serde", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
temp = "1.0"
tempfile = "3.10"
zip = "2.1"
